# Engine2D

./: .gitignore  CMakeLists.txt  Engine2D.sln  README.md  compile_and_run.sh
Debug/: libEngine2D.lib
GLTest/: Cactus.cpp  Cactus.hpp  CallbackDelegate.h  Clock.hpp  Collidable.cpp  Collidable.hpp  Collider.hpp  ColliderSystem.cpp  ColliderSystem.hpp  Color.h  Color.hpp  Defines.hpp  Dino.cpp  Dino.hpp  Dino.inl  Drawable.h  EngineHeader.hpp  EventListener.cpp  EventListener.hpp  Floor.hpp  GLTest.vcxproj  GLTest.vcxproj.filters  GameObject.cpp  GameObject.hpp  GameObjectSystem.cpp  GameObjectSystem.hpp  IterationTimer.hpp  KeyListener.cpp  KeyListener.hpp  KeyListenerSystem.cpp  KeyListenerSystem.hpp  Line.cpp  Line.h  Line.hpp  Main.cpp  ObjectSystemBase.hpp  PhysicBody.cpp  PhysicBody.hpp  PhysicBodySystem.cpp  PhysicBodySystem.hpp  (+19 more)
GLTest/Includes/: Sprite.hpp
GLTest/Includes/GLFW/: glfw3.h
GLTest/Includes/glad/: glad.h
Libs/: glfw3.lib
README/: README.md
Utils/: Event.hpp  Line.hpp  PrimitiveShape.hpp  RectangleShape.cpp  Shape.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Vector2.hpp
WindowSystem/: UiObject.hpp  UiSystem.cpp  UiSystem.hpp  UiWindow.cpp  UiWindow.hpp
